--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@moralisweb3/eslint-config": "^1.0.0",
+    "@rainbow-me/rainbowkit": "^0.7.1",
     "@web3uikit/core": "^0.1.5",
     "@web3uikit/icons": "^0.1.5",
     "axios": "^0.27.2",
@@ -27,6 +28,7 @@
     "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
     "wagmi": "^0.6.4"
   },
   "devDependencies": {
